2003-11-20  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Add a configure flag to turn on deprecation warnings.

2003-11-20  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Use the status bar. Thanks to Brent Fox <bfox@redhat.com>
	
2003-11-20  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Lowercase the k in KB. I'm going mad and can't read now. If I get
	this wrong one more time I'll use "kilobytes" instead.

2003-11-17  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c: Alexander Winston pointed out that SI units
	should have a space between the number and the units. Fixed.

2003-11-16  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added 'ja' (Japanese)  into ALL_LINGUAS.

2003-11-12  Ross Burton  <ross@burtonini.com>

	* src/sj-about.c: 
	Give the translators some credit.

2003-11-12  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Add an --autostart option, and activate the Extract button if its
	specified.

	* src/sound-juicer.h:
	Declare the autostart variable.

	* src/sj-extracting.c:
	When autostarting, quit when we've finished.

2003-11-12  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Add an option so that no directories are created for the song.

2003-11-11  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Update for 0.5.7.

2003-11-11  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Clear the list store first when no CD is inserted. Appears to fix
	*many* bugs.

2003-11-10  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Remove the call to gst_init().

	* src/sj-main.c:
	Add the GStreamer popt table for --help coolness. Also cleanup the
	includes a little.

2003-11-10  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Make the "invalid encoder" dialog work...

2003-10-31  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Add GObject and GThread to the GLib compiler arguments.

	* test/mb-test.c
	Initialize threads, and remove the explicit CD-ROM set.
