@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 _Name=Sound Juicer CD Ripper
-_Comment=Rip music from your CDs
+_Comment=Extract music from your CDs
 Exec=sound-juicer
 Icon=sound-juicer.png
 StartupNotify=true
