@@ -1,5 +1,11 @@
 2003-11-20  Ross Burton  <ross@burtonini.com>
 
+	* data/sound-juicer.desktop.in:
+	* src/sj-about.c:
+	One doesn't "rip" CDs, one "extracts the audio".
+
+2003-11-20  Ross Burton  <ross@burtonini.com>
+
 	* configure.in:
 	Add a configure flag to turn on deprecation warnings.
 
